# track-it

./: LICENSE  README.md  README_FEATURES.md  index.html  package.json
.github/workflows/: release.yml  tauri-publish.yml  tauri-release.yml
.zed/: debug.json  tasks.json
migrations/: 20250807151409_Init.down.sql  20250807151409_Init.up.sql  20250808205309_Remove_duration_field_from_tracker_entry_line.down.sql  20250808205309_Remove_duration_field_from_tracker_entry_line.up.sql  20250808210758_Add_is_deleted_field_to_tables.down.sql  20250808210758_Add_is_deleted_field_to_tables.up.sql  20251004050413_Resumable_lines.down.sql  20251004050413_Resumable_lines.up.sql
src/: App.css  App.tsx  main.tsx  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  database.rs  error.rs  lib.rs  main.rs
src-tauri/src/domains/: tracker.rs
src-tauri/src/domains/tracker/domain/: model.rs  repository.rs  service.rs
src-tauri/src/domains/tracker/dto/: tracker_dto.rs
src-tauri/src/domains/tracker/infra/: impl_repository.rs  impl_service.rs
src/app/: TrackerCard.tsx  TrackerDetails.tsx  TrackerLineCard.tsx  index.ts
src/types/: tracker.ts
